[2.0.0] Improvements, building with newest Project Loom EA build.
Signed-off-by: Jacob Glickman <jacobg@sourcecade.net>