@@ -48,7 +48,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
     </properties>
 
     <dependencies>
@@ -89,8 +89,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>15</source>
+                    <target>15</target>
                     <compilerArgument>-Xlint</compilerArgument>
                 </configuration>
             </plugin>
@@ -154,7 +154,7 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm</artifactId>
-                        <version>7.2</version>
+                        <version>7.3.1</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -179,6 +179,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
+                <configuration>
+                    <argLine>--add-opens com.github.simplenet/com.github.simplenet=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
